code/dev/less/sidebar.less
#drawer {
  z-index: 999;
}

section[drawer] {
  background-color: @app-side-menu-background;

  #logo {
    background-color: @app-side-menu-background-logo;
    height: @app-top-menu-height;
    img {
      margin: 8px 5px;
      vertical-align: middle;
      width: 50%;
    }
  }

  .side-menu {

    .side-menu-item {
      cursor: pointer;
      display: block;
      height: @app-side-menu-item-height;
      line-height: (@app-side-menu-item-height - 20);
      padding: 10px;
      font-size: 16px;
      color: @app-side-menu-text-color;
      //border-bottom: 1px solid lighten(@app-side-menu-background, 5%);
      text-decoration: none;

      &.selected {
        background-color: @app-side-menu-background-selected;
      }

      &.active {
        border-right: 4px solid @app-side-menu-text-color;
      }

      i {
        margin: 0 10px;
      }

      &:after {
        font-family: FontAwesome;
        content: "\f0d8";
        float: right;
      }
      &.hide-caret {
        &:after {
          content: "";
        }
      }
    }

    .side-menu-sub-item {
      display: block;
      border-bottom: 1px solid gray;
      padding-bottom: 5px;
      margin-bottom: 5px;
      margin-right: 10px;
      margin-left: 40px;
      color: @app-side-menu-text-color;
      text-decoration: none;

      &.active {
        color: white;
      }
    }

    .side-menu-sub-item {
      display: none;
    }

    .active-side-menu-item {
      .side-menu-item {
        &:after {
          content: "\f0d7";
        }
      }
      .side-menu-sub-item {
        display: block;
      }
    }
  }

}

